@@ -23,6 +23,8 @@ LIST OF CHANGES
  - when searching snv_path use bait_name=Exome for (cD|R)NA library types
  - tracking database: 
      add a unique db constraint for all types of status descriptions;
+     make temporal_index column in run_status_dict table non-nullable and
+     add a unique constraint on it;
      simplify DBIx binding for statuses;
      add a method for temporal comparison of run statuses
 
